force-app/main/default/objects/Account/fields/Availability_Notes__c.field-meta.xml
<CustomField>
    <fullName>Availability_Notes__c</fullName>
    <label>Availability Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>