force-app/main/default/objects/Account/fields/Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status__c</fullName>
    <label>Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Limited</fullName><default>false</default><label>Limited</label></value>
            <value><fullName>Unavailable</fullName><default>false</default><label>Unavailable</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>