force-app/main/default/objects/Account/fields/Current_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Current_Milestone__c</fullName>
    <formula>IF(
  ISBLANK(Total_Volunteer_Hours__c),
  "",
  IF(
    Total_Volunteer_Hours__c >= $CustomMetadata.Volunteer_Milestone__mdt.Platinum.Hours_Required__c,
    $CustomMetadata.Volunteer_Milestone__mdt.Platinum.Milestone_Label__c,
    IF(
      Total_Volunteer_Hours__c >= $CustomMetadata.Volunteer_Milestone__mdt.Gold.Hours_Required__c,
      $CustomMetadata.Volunteer_Milestone__mdt.Gold.Milestone_Label__c,
      IF(
        Total_Volunteer_Hours__c >= $CustomMetadata.Volunteer_Milestone__mdt.Silver.Hours_Required__c,
        $CustomMetadata.Volunteer_Milestone__mdt.Silver.Milestone_Label__c,
        IF(
          Total_Volunteer_Hours__c >= $CustomMetadata.Volunteer_Milestone__mdt.Bronze.Hours_Required__c,
          $CustomMetadata.Volunteer_Milestone__mdt.Bronze.Milestone_Label__c,
          ""
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Milestone</label>
    <type>Text</type>
</CustomField>