force-app/main/default/objects/Account/fields/Preferred_Days__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Days__c</fullName>
    <label>Preferred Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Monday</fullName><default>false</default><label>Monday</label></value>
            <value><fullName>Tuesday</fullName><default>false</default><label>Tuesday</label></value>
            <value><fullName>Wednesday</fullName><default>false</default><label>Wednesday</label></value>
            <value><fullName>Thursday</fullName><default>false</default><label>Thursday</label></value>
            <value><fullName>Friday</fullName><default>false</default><label>Friday</label></value>
            <value><fullName>Saturday</fullName><default>false</default><label>Saturday</label></value>
            <value><fullName>Sunday</fullName><default>false</default><label>Sunday</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>