force-app/main/default/objects/Account/fields/Preferred_Times__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Times__c</fullName>
    <label>Preferred Times</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Morning (8am-12pm)</fullName><default>false</default><label>Morning (8am-12pm)</label></value>
            <value><fullName>Afternoon (12pm-5pm)</fullName><default>false</default><label>Afternoon (12pm-5pm)</label></value>
            <value><fullName>Evening (5pm-8pm)</fullName><default>false</default><label>Evening (5pm-8pm)</label></value>
            <value><fullName>Weekdays</fullName><default>false</default><label>Weekdays</label></value>
            <value><fullName>Weekends</fullName><default>false</default><label>Weekends</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>